--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod"
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:03-frontend": "node dist/03-frontend/server/server.mjs"
